@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.30 2010-05-26 15:00:22 dereine Exp $
+; $Id: views.info,v 1.7.6.31 2010-05-26 15:40:27 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -14,6 +14,7 @@ files[] = handlers/views_handler_argument_date.inc
 files[] = handlers/views_handler_argument_formula.inc
 files[] = handlers/views_handler_argument_many_to_one.inc
 files[] = handlers/views_handler_argument_null.inc
+files[] = handlers/views_handler_argument_null.test
 files[] = handlers/views_handler_argument_numeric.inc
 files[] = handlers/views_handler_argument_string.inc
 files[] = handlers/views_handler_argument_group_by_numeric.inc
